--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "device_test/bandwidthTest/cuda-samples"]
 	path = device_test/bandwidthTest/cuda-samples
 	url = https://github.com/NVIDIA/cuda-samples.git
+[submodule "cupy_test/cupy"]
+	path = cupy_test/cupy
+	url = https://github.com/cupy/cupy.git
